support native build in virtualized environment (enable sw rendering) & add javafx-maven-plugin