@@ -152,26 +152,26 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
-            <!--<plugin>
+
+            <!-- let agent to generate reflection json config files. -->
+            <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
-                <executions>
-                    <execution>
-                        &lt;!&ndash; Default configuration for running with: mvn clean javafx:run &ndash;&gt;
-                        <id>default-cli</id>
-                        <configuration>
-                            <mainClass>club.youtee.filerename/club.youtee.filerename.MainApplication</mainClass>
-                            <launcher>app</launcher>
-                            <jlinkZipName>app</jlinkZipName>
-                            <jlinkImageName>app</jlinkImageName>
-                            <noManPages>true</noManPages>
-                            <stripDebug>true</stripDebug>
-                            <noHeaderFiles>true</noHeaderFiles>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>-->
+                <configuration>
+                    <mainClass>club.youtee.filerename/club.youtee.filerename.MainApplication</mainClass>
+                    <options>
+                        <!-- enable sw rendering to show reflect-config.json what reflection classes need to add manually -->
+                        <option>-Dprism.order=sw</option>
+                        <option>-Dprism.verbose=true</option>
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx=club.youtee.filerename</option>
+                        <option>--add-exports</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=club.youtee.filerename</option>
+                    </options>
+                </configuration>
+            </plugin>
+
             <!-- javaFX fat jar build tools -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -195,18 +195,25 @@
                     </execution>
                 </executions>
             </plugin>
+
             <!-- javaFX build native application -->
             <plugin>
                 <groupId>com.gluonhq</groupId>
                 <artifactId>gluonfx-maven-plugin</artifactId>
                 <version>1.0.23</version>
                 <configuration>
-                    <!-- hw is not available in virtualized environment, JavaFX defaults to sw rendering instead.
-                         So we need to enable sw rendering.-->
+                    <!-- enable sw rendering.
+                         hw is not available in virtualized environment,
+                         JavaFX defaults to sw rendering instead. -->
                     <enableSWRendering>true</enableSWRendering>
                     <mainClass>club.youtee.filerename.MainApplication</mainClass>
                     <!-- 涉及反射的类 -->
                     <reflectionList>
+                        <!-- 部分sw的类须手动添加（参考reflect-config.json） -->
+                        <list>com.sun.scenario.effect.impl.sw.java.JSWInvertMaskPeer</list>
+                        <list>com.sun.scenario.effect.impl.sw.java.JSWBlend_SRC_ATOPPeer</list>
+                        <list>com.sun.scenario.effect.impl.sw.java.JSWLinearConvolveShadowPeer</list>
+                        <list>com.sun.scenario.effect.impl.sw.java.JSWRendererDelegate</list>
                         <list>club.youtee.filerename.controller.MainController</list>
                         <list>club.youtee.filerename.controller.PreferenceController</list>
                         <list>org.kordamp.bootstrapfx.BootstrapFX</list>
